--- a/Home.css
+++ b/Home.css
@@ -41,7 +41,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #BC0E0E;
+    color: #1ca5d7;
 }
 
 nav a span {
@@ -51,7 +51,7 @@ nav a span {
     width: 100%;
     height: 100%;
     z-index: -1;
-    border-bottom: 2px solid #BC0E0E;
+    border-bottom: 2px solid #1ca5d7;
     border-radius: 15px;
     transform: scale(0) translateY(50px);
     opacity: 0;
@@ -74,7 +74,7 @@ nav a:hover span {
 #greeting {
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
-    color: #BC0E0E;
+    color: #1ca5d7;
     font-weight: 700;
 }
 .carousel {
@@ -168,7 +168,7 @@ nav a:hover span {
     /* width: 10px;
     height: 10px; */
     font-size: 0.9rem;
-    color: #BC0E0E;
+    color: #1ca5d7
     /* background-color: white; */
 }
 
