--- a/aboutus.css
+++ b/aboutus.css
@@ -46,7 +46,7 @@ nav a {
 }
 
 nav a:hover {
-  color: #BC0E0E;
+  color: #1ca5d7;
 }
 
 nav a span {
@@ -56,7 +56,7 @@ nav a span {
   width: 100%;
   height: 100%;
   z-index: -1;
-  border-bottom: 2px solid #BC0E0E;
+  border-bottom: 2px solid #1ca5d7;
   border-radius: 15px;
   transform: scale(0) translateY(50px);
   opacity: 0;
@@ -92,7 +92,7 @@ nav a:hover span {
   background: #fff;
   border-radius: 10px;
   margin-left: 30px;
-  background: rgba(54, 41, 41, 0.63);
+  background: rgba(61, 79, 82, 0.63);
   backdrop-filter: blur(15px);
 }
 
@@ -144,7 +144,7 @@ nav a:hover span {
 .content .detail h2 span {
   font-size: 0.7em;
   font-family: Poppins;
-  color: #BC0E0E;
+  color: #1ca5d7;
   font-weight: bold;
 }
 
@@ -169,13 +169,13 @@ nav a:hover span {
   border-radius: 50%;
   background: transparent;
   font-size: 1.5em;
-  color: #444;
+  color: #a48c8c;
   text-decoration: none;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   transition: 0.5s;
 }
 
 .sci li a:hover {
-  background: #BC0E0E;
+  background: #1ca5d7;
   color: #fff;
 }
