--- a/search.css
+++ b/search.css
@@ -46,7 +46,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #BC0E0E;
+    color:#1ca5d7;
 }
 
 nav a span {
@@ -56,7 +56,7 @@ nav a span {
     width: 100%;
     height: 100%;
     z-index: -1;
-    border-bottom: 2px solid #BC0E0E;
+    border-bottom: 2px solid #1ca5d7;
     border-radius: 15px;
     transform: scale(0) translateY(50px);
     opacity: 0;
